# neovimconf-2022

./: .copier-answers.yml  .envrc  .gitignore  01-description.md  02-personal-blurb.md  03-talk-notes.md  index.html  index.md  manifest.json  markata.json  markata.toml  pyproject.toml  rss.xml  service-worker.js  slides.md
.github/workflows/: build-site.yml
01-description/: index.html
02-personal-blurb/: index.html
03-talk-notes/: index.html
_logs/debug/: index.html
_logs/info/: index.html
_logs/warning/: index.html
all/: index.html
archive/: index.html
draft/: index.html
neovimconf/: index.html
pages/: 01-description.md  02-personal-blurb.md  03-talk-notes.md  slides.md
pages/templates/: T_slides.html
slides/: index.html  slides.md
slides/slide-0/: index.html
slides/slide-1/: index.html
slides/slide-10/: index.html
slides/slide-11/: index.html
slides/slide-12/: index.html
slides/slide-13/: index.html
slides/slide-14/: index.html
slides/slide-2/: index.html
slides/slide-3/: index.html
slides/slide-4/: index.html
slides/slide-5/: index.html
slides/slide-6/: index.html
slides/slide-7/: index.html
slides/slide-8/: index.html
slides/slide-9/: index.html
