[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vim_conf_2022"

description = "VimConf 2022 material"

readme = "README.md"
requires-python = ">=3.7"
license = "MIT"


authors = [
  { name = "Nicholas Payne", email = "vimconf2022@pype.dev" },
]


dependencies = ['markata~=0.5.0.dev0', 'markata-slides', 'markdown-it-py[plugins]']
dynamic = ["version"]

[tool.hatch.version]
path = "vim_conf_2022/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pyinstrument",
]

[tool.hatch.envs.default.scripts]
clean = "markata clean"
build = "markata build"
tui = "markata tui"
serve = "python -m http.server 8000 --directory=markout"
clean-build = ['clean', 'build',]
clean-tui = ['clean', 'build', 'tui']
clean-serve = ['clean', 'build', 'serve']
