[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neovimconf"

description = "NeovimConf 2022 material"

readme = "README.md"
requires-python = ">=3.7"
license = "MIT"


authors = [
  { name = "Nicholas Payne", email = "neovimconf2022@pype.dev" },
]


dependencies = ['markata~=0.6.0.dev15', 'markata-slides', 'markdown-it-py[plugins]']
dynamic = ["version"]

[tool.hatch.version]
path = "neovimconf/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pyinstrument",
]

[tool.hatch.envs.default.scripts]
clean = "markata clean"
build = "markata build"
tui = "markata tui"
serve = "python -m http.server 8000 --directory=markout"
clean-build = ['clean', 'build',]
build-serve = ['build', 'serve',]
clean-tui = ['clean', 'build', 'tui']
clean-serve = ['clean', 'build', 'serve']
